--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(GLEW)
-cmake_minimum_required(VERSION 2.4)
+cmake_minimum_required(VERSION 2.8)
 
 if(COMMAND cmake_policy)
 	cmake_policy(SET CMP0003 NEW)
@@ -21,9 +21,7 @@ endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 #
 # All platforms need OpenGL
 #
-
-include(FindPkgConfig)
-pkg_check_modules( OpenGL REQUIRED gl )
+find_package(OpenGL REQUIRED)
 
 #
 # Linux needs X11
@@ -41,23 +39,23 @@ add_library(GLEW_static STATIC src/glew.c )
 add_library(GLEW_shared SHARED src/glew.c )
 set_target_properties(GLEW_static PROPERTIES OUTPUT_NAME ${GLEW_LIB_NAME} PREFIX lib)
 set_target_properties(GLEW_shared PROPERTIES OUTPUT_NAME ${GLEW_LIB_NAME} PREFIX "${DLL_PREFIX}")
-target_link_libraries(GLEW_shared ${OpenGL_LDFLAGS})
+target_link_libraries(GLEW_shared ${OPENGL_LIBRARIES})
 
 add_library(GLEW_MX_static STATIC src/glew.c )
 add_library(GLEW_MX_shared SHARED src/glew.c )
 set_target_properties(GLEW_MX_static PROPERTIES OUTPUT_NAME ${GLEW_LIB_NAME}mx COMPILE_FLAGS "-DGLEW_MX" PREFIX lib)
 set_target_properties(GLEW_MX_shared PROPERTIES OUTPUT_NAME ${GLEW_LIB_NAME}mx COMPILE_FLAGS "-DGLEW_MX" PREFIX "${DLL_PREFIX}")
-target_link_libraries(GLEW_MX_shared ${OpenGL_LDFLAGS})
+target_link_libraries(GLEW_MX_shared ${OPENGL_LIBRARIES})
 
 add_executable(glewinfo src/glewinfo.c)
-target_link_libraries(glewinfo GLEW_shared ${OpenGL_LDFLAGS})
+target_link_libraries(glewinfo GLEW_shared ${OPENGL_LIBRARIES})
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     target_link_libraries(glewinfo ${X11_LIBRARIES})
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
 add_executable(visualinfo src/visualinfo.c)
-target_link_libraries(visualinfo GLEW_shared ${OpenGL_LDFLAGS})
+target_link_libraries(visualinfo GLEW_shared ${OPENGL_LIBRARIES})
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     target_link_libraries(visualinfo ${X11_LIBRARIES})
